<resources>
    <string name="app_name">Dish Wish</string>
    <string name="cook">To Cook</string>
    <string name="eat">To Eat</string>
    <string name="dish_title">Name of the Dish</string>
    <string name="dish_type">Dish Type</string>
    <string name="category">Category</string>
    <string name="add_dish">Add Dish</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="character_count">50</string>
    <string name="savory">Savory</string>
    <string name="sweet">Sweet</string>
    <string name="insertion_fail">Failed to add dish</string>
    <string name="insertion_success">New dish added</string>
    <string name="update_fail">Failed to update dish</string>
    <string name="update_success">Dish updated successfully</string>
    <string name="delete_fail">Failed to delete dish</string>
    <string name="delete_success">Dish deleted successfully</string>
    <string name="delete_dialog_msg">Delete this dish?</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="length_error_msg">Too long!</string>
    <string name="empty_view_title">Your plate\'s empty!</string>
    <string name="empty_view_subtitle">Get started by adding a dish</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="display_category_key">display_category</string>
    <string name="about_category_key">about_category</string>
    <string name="list_order_key">list_order</string>
    <string name="night_mode_key">night_mode</string>
    <string name="version_key">version</string>
    <string name="rate_key">rate</string>
    <string name="dish_name_order">dish_name</string>
    <string name="dish_name_order_desc">dish_name_desc</string>
    <string name="date_added_order">date_added</string>
    <string name="date_added_order_desc">date_added_desc</string>
    <string name="display_category_title">Display</string>
    <string name="about_category_title">About</string>
    <string name="list_order_title">Order lists by</string>
    <string name="night_mode_title">Night mode</string>
    <string name="version_title">Version</string>
    <string name="rate_title">Rate on Google Play</string>
    <string name="share_cook">Dishes I wish to cook:</string>
    <string name="share_eat">Dishes I wish to eat:</string>
    <string name="edit">Edit</string>
    <string name="search_recipes">Search for recipes</string>
    <string name="find_near_me">Find near me</string>
</resources>
